[tool.poetry]
name = "marmon"
version = "0.1.1"
description = "Market monitoring system"
authors = ["Mikhail Chigrin"]
license = "MIT"

[tool.poetry.scripts]
marmon = "apps:main"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
psycopg2-binary = "^2.8.6"
uvicorn = "^0.13.2"
python-dotenv = "^0.15.0"
aiogram = "^2.12"
databases = "^0.4.1"
alembic = "^1.4.3"
pydantic = "^1.7.3"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
